--- a/style.css
+++ b/style.css
@@ -11,7 +11,9 @@
     height:  70px;
     background-color:#f0f8ff;
     color: black;
-    /* display: flex; */
+    display: flex;
+   
+    justify-content: center;
     align-items: center;
     position: relative;
 }
@@ -96,9 +98,9 @@ color: white;}
 .hero-section{
     width: 100%;
     height: 650px;
-    background-color: black;
     background-image: url("./images/1440x640-21.jpg");
-    object-fit:contain;
+    
+    background-size: cover;
     background-repeat:no-repeat;
     padding-top: 230px;
     padding-left: 50px;
@@ -249,6 +251,7 @@ overflow: hidden;
     margin-left: 20px;
     background-image: url("./images/HOME_B6_Merchandising_684x684_pc.jpg");
     object-fit: cover;
+    background-size: cover;
     background-size: 480px 500px;
     background-repeat: no-repeat ;
     border-top-left-radius: 22px;
@@ -527,7 +530,9 @@ margin-top: 60px;
     margin-top: 40px;
     width: 100%;
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
+
 }
 .exp-picpart{ width: 700px;
 height: 600px;
@@ -684,6 +689,7 @@ margin-top: 30px;
 .last-footer{
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
    font-family: 'Times New Roman', Times, serif;
 border: 1px solid #86878b;
