--- a/style.css
+++ b/style.css
@@ -7,7 +7,9 @@
 }
 
 .navbar{
-    width: 100%;
+   
+    
+    width: 1260px;
     height:  70px;
     background-color:#f0f8ff;
     color: black;
@@ -72,7 +74,8 @@ color: white;}
 }
 .nav-smal{
     padding-top: 8px;
-    width: 100%;
+    /* width: 100%; */
+    width: 1260px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -96,11 +99,12 @@ color: white;}
 } 
 
 .hero-section{
-    width: 100%;
+    /* width: 100%; */
+    width: 1260px;
     height: 650px;
     background-image: url("./images/1440x640-21.jpg");
     
-    background-size: cover;
+    background-size: contain;
     background-repeat:no-repeat;
     padding-top: 230px;
     padding-left: 50px;
@@ -138,12 +142,14 @@ color: white;}
 }
 
 .buying-area{
-    width: 100%;
+    /* width: 100%; */
+    width: 1260px;
     height: 700px;
 background-color: #f4f4f4;
 }
 .product-heading{
-    width: 100%;
+    /* width: 100%; */
+    width: 1260px;
     height: 70px;
     color: #111010;
     text-align: center;
@@ -153,7 +159,8 @@ background-color: #f4f4f4;
 
 .product-options{
     
-    width: 100%;
+    /* width: 100%; */
+    width: 1260px;
     height: 60px ;
     display: flex;
    align-items: center;
@@ -174,7 +181,8 @@ background-color: #f4f4f4;
 }
 .product-img{
     height: 400px;
-    width: 100%;
+    /* width: 100%; */
+    width: 1260px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -218,10 +226,13 @@ overflow: hidden;
 .products-heading{
     text-align: center;
     padding-top: 20px;
+    width: 1260px;
+    
 }
 .products-name{
     display: flex;
     justify-content: center;
+    width: 1260px;
 }
 .product{
     margin-left: 30px;
@@ -232,7 +243,8 @@ overflow: hidden;
 }
 
 .obj-div{
-    width: 100%;
+    /* width: 100%; */
+    width: 1260px;
     height:fit-content;
     padding-top: 20px;
     display: flex;
@@ -250,8 +262,8 @@ overflow: hidden;
     height: 500px;
     margin-left: 20px;
     background-image: url("./images/HOME_B6_Merchandising_684x684_pc.jpg");
-    object-fit: cover;
-    background-size: cover;
+    /* object-fit: cover; */
+    background-size: contain;
     background-size: 480px 500px;
     background-repeat: no-repeat ;
     border-top-left-radius: 22px;
@@ -387,17 +399,19 @@ justify-content: space-between;
         display: flex;
         transform: scale(1.3);
     }  
-
+.recom-head{width:1260px ;}
     .recom-head p{
         font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         align-items: center;
         font-size: 50px;
        text-align: center;
+
     }
   .recommended-section{
     /* height: 700px; */
     height:fit-content;
-    width: 100%;
+    /* width: 100%; */
+    width: 1260px;
     background-color:white;
     display: flex;
     flex-wrap: wrap;
@@ -520,7 +534,9 @@ margin-top: 60px;
         cursor: pointer;
     }
 }
-
+.explore-section{
+    width: 1260px;
+}
 .explore-headin{
     text-align: center;
     font-size: 52px;
@@ -528,7 +544,8 @@ margin-top: 60px;
 }
 .explore-sec{
     margin-top: 40px;
-    width: 100%;
+    /* width: 100%; */
+    width: 1260px;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -687,7 +704,8 @@ margin-top: 30px;
 }
 
 .last-footer{
-    width: 100%;
+    /* width: 100%; */
+    width: 1260px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -714,3 +732,16 @@ border: 1px solid #86878b;
     }
   
    }
+
+   @media only screen and (min-width:1440px){
+   *{.last-footer ,.explore-sec , .explore-section , 
+    .recommended-section , .obj-div , .products-name , 
+    .products-heading,.product-img , .product-options , .navbar , .nav-smal , .hero-section , .buying-area , .product-heading{
+       
+        width: 1440px; }
+    
+    
+   }
+   }
+
+ 
